--- a/index.html
+++ b/index.html
@@ -5,7 +5,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wildflower Disability Support Services — NDIS Support in the Lockyer Valley &amp; Ipswich</title>
+  <meta name="description" content="Wildflower Disability Support Services is a registered NDIS provider in the Lockyer Valley and Ipswich region. We offer personalised disability support including community participation, daily living assistance, and more.">
+  <meta name="theme-color" content="#5a7a5a">
+  <link rel="canonical" href="https://wildflowerdss.com.au/">
   <link rel="icon" type="image/png" href="wdss_favicon.png">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Wildflower Disability Support Services — NDIS Support in the Lockyer Valley & Ipswich">
+  <meta property="og:description" content="Registered NDIS provider offering personalised disability support in the Lockyer Valley and Ipswich. Community participation, daily living assistance, and more.">
+  <meta property="og:url" content="https://wildflowerdss.com.au/">
+  <meta property="og:image" content="https://wildflowerdss.com.au/logo.png">
+  <meta property="og:site_name" content="Wildflower Disability Support Services">
+  <meta property="og:locale" content="en_AU">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Wildflower Disability Support Services — NDIS Support in the Lockyer Valley & Ipswich">
+  <meta name="twitter:description" content="Registered NDIS provider offering personalised disability support in the Lockyer Valley and Ipswich.">
+  <meta name="twitter:image" content="https://wildflowerdss.com.au/logo.png">
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Wildflower Disability Support Services",
+    "description": "Registered NDIS provider offering personalised disability support services in the Lockyer Valley and Ipswich region.",
+    "url": "https://wildflowerdss.com.au/",
+    "logo": "https://wildflowerdss.com.au/logo.png",
+    "image": "https://wildflowerdss.com.au/logo.png",
+    "areaServed": [
+      {
+        "@type": "Place",
+        "name": "Lockyer Valley"
+      },
+      {
+        "@type": "Place",
+        "name": "Ipswich"
+      }
+    ],
+    "serviceType": "Disability Support Services",
+    "additionalType": "https://schema.org/MedicalBusiness",
+    "sameAs": []
+  }
+  </script>
+
+  <!-- Preconnect hints -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+  <link rel="dns-prefetch" href="https://unpkg.com">
+  <link rel="dns-prefetch" href="https://docs.google.com">
+  <link rel="dns-prefetch" href="https://drive.google.com">
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -13,7 +65,6 @@
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     crossorigin="anonymous">
   <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Source+Sans+3:wght@400;500;600;700&display=swap"
     rel="stylesheet">
@@ -95,8 +146,8 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 hero-content d-flex flex-column align-items-start">
-          <h1 id="hero_heading"></h1>
-          <p id="hero_description"></p>
+          <h1 id="hero_heading">Personalised NDIS Disability Support in the Lockyer Valley &amp; Ipswich</h1>
+          <p id="hero_description">Wildflower Disability Support Services provides compassionate, person-centred NDIS support to help you live your best life.</p>
           <div class="d-flex flex-wrap gap-3">
             <a href="#contact" class="btn-primary-custom">
               <span id="hero_cta_primary"></span>
@@ -137,8 +188,8 @@
               <i class="bi" id="about_label_icon" aria-hidden="true"></i>
               <span id="about_label"></span>
             </span>
-            <h2 class="section-title" id="about_heading"></h2>
-            <p class="section-subtitle mb-4" id="about_subtitle"></p>
+            <h2 class="section-title" id="about_heading">Who We Are</h2>
+            <p class="section-subtitle mb-4" id="about_subtitle">A locally owned disability support provider committed to empowering individuals in the Lockyer Valley and Ipswich.</p>
             <p style="color: var(--clr-text-muted); line-height:1.8; margin-bottom: 28px;" id="about_body"></p>
 
             <div class="row g-3 mb-4" id="values_grid">
@@ -163,8 +214,8 @@
             <i class="bi" id="services_label_icon" aria-hidden="true"></i>
             <span id="services_label"></span>
           </span>
-          <h2 class="section-title" id="services_heading"></h2>
-          <p class="section-subtitle mx-auto" id="services_subtitle"></p>
+          <h2 class="section-title" id="services_heading">Our NDIS Services</h2>
+          <p class="section-subtitle mx-auto" id="services_subtitle">We offer a range of personalised disability support services tailored to your NDIS plan.</p>
         </div>
 
         <div class="row g-4 justify-content-center" id="services_grid">
@@ -181,7 +232,7 @@
             <i class="bi" id="testimonials_label_icon" aria-hidden="true"></i>
             <span id="testimonials_label"></span>
           </span>
-          <h2 class="section-title" id="testimonials_heading" style="color:#fff;"></h2>
+          <h2 class="section-title" id="testimonials_heading" style="color:#fff;">What Our Clients Say</h2>
         </div>
         <div id="testimonialSplide" class="splide fade-up" aria-label="Testimonials">
           <div class="splide__track">
@@ -201,8 +252,8 @@
             <i class="bi" id="team_label_icon" aria-hidden="true"></i>
             <span id="team_label"></span>
           </span>
-          <h2 class="section-title" id="team_heading"></h2>
-          <p class="section-subtitle mx-auto" id="team_subtitle"></p>
+          <h2 class="section-title" id="team_heading">Meet Our Team</h2>
+          <p class="section-subtitle mx-auto" id="team_subtitle">Our passionate team of support workers are here to help you achieve your goals.</p>
         </div>
 
         <div class="row g-4 justify-content-center" id="team_grid">
@@ -219,8 +270,8 @@
             <i class="bi" id="gallery_label_icon" aria-hidden="true"></i>
             <span id="gallery_label"></span>
           </span>
-          <h2 class="section-title" id="gallery_heading"></h2>
-          <p class="section-subtitle mx-auto" id="gallery_subtitle"></p>
+          <h2 class="section-title" id="gallery_heading">Gallery</h2>
+          <p class="section-subtitle mx-auto" id="gallery_subtitle">See what we get up to at Wildflower Disability Support Services.</p>
         </div>
         <div id="gallerySplide" class="splide fade-up" aria-label="Image Gallery">
           <div class="splide__track">
@@ -245,8 +296,8 @@
             <i class="bi" id="contact_label_icon" aria-hidden="true"></i>
             <span id="contact_label"></span>
           </span>
-          <h2 class="section-title" id="contact_heading"></h2>
-          <p class="section-subtitle mx-auto" id="contact_subtitle"></p>
+          <h2 class="section-title" id="contact_heading">Get in Touch</h2>
+          <p class="section-subtitle mx-auto" id="contact_subtitle">Ready to learn more about our services? Contact our friendly team today.</p>
         </div>
 
         <div class="row g-4">
@@ -436,6 +487,25 @@
 
   <script src="script.js"></script>
   <script src="content.js"></script>
+
+  <!-- Noscript fallback for search engines and users without JS -->
+  <noscript>
+    <section style="max-width:800px;margin:80px auto;padding:20px;font-family:sans-serif;">
+      <h2>About Wildflower Disability Support Services</h2>
+      <p>Wildflower Disability Support Services is a registered NDIS provider based in the Lockyer Valley and Ipswich region of Queensland, Australia. We provide compassionate, person-centred disability support to help individuals live fulfilling, independent lives.</p>
+      <h3>Our Services</h3>
+      <ul>
+        <li>Community Participation &amp; Social Support</li>
+        <li>Assistance with Daily Living</li>
+        <li>Transport Assistance</li>
+        <li>Household Tasks &amp; Home Maintenance</li>
+        <li>Skill Building &amp; Development</li>
+        <li>Group Activities</li>
+      </ul>
+      <h3>Contact Us</h3>
+      <p>Get in touch with our friendly team to discuss how we can support you or your loved one through the NDIS.</p>
+    </section>
+  </noscript>
 </body>
 
 </html>
