--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="description" content="Wildflower Disability Support Services is a registered NDIS provider in the Lockyer Valley and Ipswich region. We offer personalised disability support including community participation, daily living assistance, and more.">
   <meta name="theme-color" content="#5a7a5a">
   <link rel="canonical" href="https://wildflowerdss.com.au/">
-  <link rel="icon" type="image/png" href="wdss_favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Wildflower Disability Support Services — NDIS Support in the Lockyer Valley & Ipswich">
   <meta property="og:description" content="Registered NDIS provider offering personalised disability support in the Lockyer Valley and Ipswich. Community participation, daily living assistance, and more.">
   <meta property="og:url" content="https://wildflowerdss.com.au/">
-  <meta property="og:image" content="https://wildflowerdss.com.au/logo.png">
+  <meta property="og:image" content="https://wildflowerdss.com.au/assets/images/logo.png">
   <meta property="og:site_name" content="Wildflower Disability Support Services">
   <meta property="og:locale" content="en_AU">
 
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Wildflower Disability Support Services — NDIS Support in the Lockyer Valley & Ipswich">
   <meta name="twitter:description" content="Registered NDIS provider offering personalised disability support in the Lockyer Valley and Ipswich.">
-  <meta name="twitter:image" content="https://wildflowerdss.com.au/logo.png">
+  <meta name="twitter:image" content="https://wildflowerdss.com.au/assets/images/logo.png">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -33,8 +33,8 @@
     "name": "Wildflower Disability Support Services",
     "description": "Registered NDIS provider offering personalised disability support services in the Lockyer Valley and Ipswich region.",
     "url": "https://wildflowerdss.com.au/",
-    "logo": "https://wildflowerdss.com.au/logo.png",
-    "image": "https://wildflowerdss.com.au/logo.png",
+    "logo": "https://wildflowerdss.com.au/assets/images/logo.png",
+    "image": "https://wildflowerdss.com.au/assets/images/logo.png",
     "areaServed": [
       {
         "@type": "Place",
@@ -74,14 +74,14 @@
   <!-- Fancybox -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
   <script>document.body.classList.add('js');</script>
   <!-- Loading Screen -->
   <div class="loading-screen" id="loadingScreen" role="status" aria-live="polite" aria-label="Loading page content">
-    <img src="footer_logo.svg" alt="Wildflower Disability Support Services">
+    <img src="assets/images/light_logo.svg" alt="Wildflower Disability Support Services">
   </div>
 
   <!-- Skip Link -->
@@ -91,7 +91,7 @@
   <div class="navbar-logo-wrapper">
     <div class="container">
       <a href="#top" class="navbar-logo-bookmark">
-        <img src="nav_logo.svg" alt="Wildflower Disability Support Services logo">
+        <img src="assets/images/logo.svg" alt="Wildflower Disability Support Services logo">
       </a>
     </div>
   </div>
@@ -428,14 +428,14 @@
       <div class="row gy-4">
         <!-- Logo – full left side -->
         <div class="col-lg-3 d-flex align-items-center justify-content-start">
-          <img src="footer_logo.svg" alt="Wildflower logo" class="footer-logo">
+          <img src="assets/images/light_logo.svg" alt="Wildflower logo" class="footer-logo">
         </div>
         <!-- Right side content -->
         <div class="col-lg-9">
           <div class="row gy-4">
             <div class="col-sm-6 col-lg-4 d-flex flex-column align-items-start justify-content-between">
               <p id="footer_description" style="opacity:0.8; line-height:1.7; font-size:0.95rem;"></p>
-              <img src="ndis-registered-provider.png" alt="Registered NDIS Provider"
+              <img src="assets/images/ndis-registered-provider.png" alt="Registered NDIS Provider"
                 style="height:80px; width:auto; margin-top:12px; opacity:0.9;">
             </div>
             <div class="col-sm-6 col-lg-3">
@@ -485,8 +485,8 @@
   <!-- Fancybox -->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 
-  <script src="script.js"></script>
-  <script src="content.js"></script>
+  <script src="assets/js/script.js"></script>
+  <script src="assets/js/content.js"></script>
 
   <!-- Noscript fallback for search engines and users without JS -->
   <noscript>
