--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <!-- ═══════════ HERO ═══════════ -->
   <header class="hero" id="top" data-section="hero" role="banner">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row align-items-center pb-5">
         <div class="col-lg-6 hero-content d-flex flex-column align-items-start">
           <h1 id="hero_heading">Personalised NDIS Disability Support in the Lockyer Valley &amp; Ipswich</h1>
           <p id="hero_description">Wildflower Disability Support Services provides compassionate, person-centred NDIS support to help you live your best life.</p>
